test/files/pos/yimports-pkgobj/minidef_1.scala

package hello

package object world {
  type Numb = Int
}
