test/files/neg/yimports-stable/minidef_1.scala

package hello

trait stuff {
  type Numb = Int
  val magic = 42
}

object world {
  val potions = new stuff {}
}
